Añadidad loginUI con un cuadro de login

--- a/main/web/main.html
+++ b/main/web/main.html
@@ -19,8 +19,8 @@
     
     <p>Bienvenidos a webDart</p>
     
-    <div id="sample_container_id">
-      <click-counter count="5"></click-counter>
+    <div id="contenedor">
+      <login-ui></login-ui>
     </div>
 
   </body>
