--- a/main/web/vistas/loginUI.html
+++ b/main/web/vistas/loginUI.html
@@ -1,10 +1,15 @@
 <link rel="import" href="packages/polymer/polymer.html">
-<polymer-element name="click-counter" attributes="count">
+<polymer-element name="login-ui">
   <template>
     <div>
-      <button on-click="{{increment}}">Click me</button><br>
-      <span>(click count: {{count}})</span>
-    </div>
+    <!--Interfaz para loguearse-->
+      <fieldset>
+          <p><input value="{{usuario}}" type="text" required id="usuario" name="usuario" placeholder="Usuario"></p>
+          <p><input value="{{password}}" type="password" required id="password" name="password" placeholder="Contraseña"></p>      
+          <p><button on-click="{{entrar}}">Entrar</button></p>
+      </fieldset>
+    <!--Fin login-->
+      </div>
   </template>
   <script type="application/dart" src="loginUI.dart"></script>
 </polymer-element>
